--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -19,7 +19,8 @@
 
     %Tema escuro k
     \usepackage[dvipsnames]{xcolor}
-    \pagecolor{CadetBlue}
+    \definecolor{Mycolor2}{HTML}{2E3440}
+    \pagecolor{Mycolor2}
     \color{white}
 
     %Codigo
