Implementação do método do Gradiente Descendente

--- a/Capitulo2(Relatorio).tex
+++ b/Capitulo2(Relatorio).tex
@@ -306,5 +306,11 @@ retorno a derivada da função entregue, no ponto especificado. Restringindo-se
 escrita pelo usuário como bem entender.
 
 
+\textbf{Método do Gradiente Descendente}
+
+asd asdasd
+
+\vspace{0.2cm}
+\input{./projetos/cpp_gradient1x1.tex}
 
 \textcolor[rgb]{1,0,0}{\section{{O Método de Newton para Várias Variáveis}}}
