--- a/projetos/cpp_gradient1x1.tex
+++ b/projetos/cpp_gradient1x1.tex
@@ -29,7 +29,7 @@ int main() {
 		// Conclui uma iteracao
 		iteracoes -= 1;
 	}
-	cout << "x que minimiza f(x) = " << x_proximo << endl;
+	cout << ``x que minimiza f(x) = '' << x_proximo << endl;
 	// Saida do algoritmo:
 	// --> x que minimiza f(x) = 2.25
 	return 0;
